--- a/data/common.yaml
+++ b/data/common.yaml
@@ -5,4 +5,4 @@ javalocal::version_minor: 'b13'
 javalocal::url_hash: '96a7b8442fe848ef90c96a2fad6ed6d1'
 javalocal::java_se: 'jdk'
 javalocal::system_path: '/usr/java'
-javalocal::install_path: 'jdk1.8.0_181'
+javalocal::install_path: ~
